# fedora-dev-profiler

./: .gitignore
fedora-dev-profiler/: README.md  pyproject.toml
fedora-dev-profiler/fedora_dev_profiler/: __main__.py
fedora-dev-profiler/fedora_dev_profiler/analysis/: __init__.py  correlator.py  heuristics.py
fedora-dev-profiler/fedora_dev_profiler/system/: __init__.py  cache.py  de_detector.py  errors.py  package_mgr.py  paths.py  process_monitor.py  stack_detector.py  systemd_client.py
fedora-dev-profiler/fedora_dev_profiler/ui/: __init__.py  app.py  details_page.py  main_window.py  overview_page.py
